# millie

./: CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  foo.md
include/merc/av/: change-scope.h  editor.h  element.h  gate.h  link.h  merc-av.h  merc-element.h  merc-link.h  mercer.h  out.h  resource.h  revolver.h  space.h  step.h  thread.h  time-keeper.h  vst-element.h  vst-link.h  vst-step.h  work.h  worker.h
realtime/: CMakeLists.txt
realtime/include/merc/av/realtime/: audio.h  video-impl.h  video.h
realtime/source/: audio.cpp  audio.mm  video.cpp  video.mm
source/: change-scope.cpp  editor-window.cpp  editor.cpp  element.cpp  merc-av.cpp  merc-element.cpp  mercer.cpp  out.cpp  pixels.mm  resource.cpp  space.cpp  thread.cpp  thread.mm  time-keeper.cpp  visitors.h  vst-element.cpp  vst-link.cpp  vst-step.mm
test/: CMakeLists.txt  config.cpp  merc-test.cpp  module.cpp  space.cpp  util.h
